force-app/main/default/objects/Late_Fee_Charges__c/Late_Fee_Charges__c.object-meta.xml
<CustomObject>
    <label>Late Fee Charges</label>
    <nameField>
        <displayFormat>LF-{00000000}</displayFormat>
        <label>Late Fee Charges Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Late Fee Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>