force-app/main/default/objects/Late_Fee_Charges__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tuition Fee</fullName>
            </value>
            <value>
                <fullName>Hostel Fee</fullName>
            </value>
            <value>
                <fullName>Transportation Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>