force-app/main/default/objects/Late_Fee_Charges__c/fields/Late_Fee_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Calculation_Type__c</fullName>
    <label>Late Fee Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily Basis</fullName>
            </value>
            <value>
                <fullName>Date Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>