force-app/main/default/objects/Late_Fee_Charges__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Academic Program</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Late Fee Charges (Program)</relationshipLabel>
    <relationshipName>Late_Fee_Charges1</relationshipName>
    <type>Lookup</type>
</CustomField>