force-app/main/default/objects/Late_Fee_Charges__c/fields/Program_Batch__c.field-meta.xml
<CustomField>
    <fullName>Program_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Batch</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Late Fee Charges</relationshipLabel>
    <relationshipName>Late_Fee_Charges2</relationshipName>
    <type>Lookup</type>
</CustomField>