force-app/main/default/objects/Late_Fee_Charges__c/fields/To_Day__c.field-meta.xml
<CustomField>
    <fullName>To_Day__c</fullName>
    <label>To Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>