force-app/main/default/objects/Late_Fee_Charges__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Late_Fee_Calculation_Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Fee_Type__c</columns>
    <columns>Program_Batch__c</columns>
    <columns>From_Day__c</columns>
    <columns>To_Day__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>